<resources>
    <string name="app_name">MealApp</string>
    <string name="add_to_favorites">FAVORITE</string>
    <string name="visit_webpage">VISIT</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="thumbnail_description">Recipe Thumbnail</string>
    <string name="no_title_found">No Title Found</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_local">Local</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Add a description</string>
    <string name="ingredients_hint">Ingredients (Separated by comma)</string>
    <string name="save_local_meal">Save</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for meals online</string>
</resources>
